[IFB-769] fix: fix cors error with spring security